--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="Tamanho_do_Texto2">40sp</dimen>
+    <dimen name="Tamanho_do_texto">40sp</dimen>
 </resources>
