--- a/app/src/main/res/layout/activity_exibe_mensagem.xml
+++ b/app/src/main/res/layout/activity_exibe_mensagem.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ExibeMensagemActivity">
@@ -12,6 +11,6 @@
         android:id="@+id/exibeMensagemTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/Tamanho_do_Texto2" />
+        android:textSize="@dimen/Tamanho_do_texto" />
 
 </LinearLayout>
