--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,14 @@
     <EditText
         android:layout_weight="2"
         android:id="@+id/mensagemEditText"
-        android:hint="Type a message"
+        android:hint="@string/dica_msg"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
 
     <Button
         android:layout_weight="1"
         android:onClick="enviarMensagem"
-        android:text="ok"
+        android:text="@string/ok"
         android:layout_width="0dp"
         android:layout_height="wrap_content" />
-
 </LinearLayout>
