--- a/app/src/main/res/values-w600dp-h600dp/dimens.xml
+++ b/app/src/main/res/values-w600dp-h600dp/dimens.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="Tamanho_do_Texto">40sp</dimen>
+    <dimen name="Tamanho_do_texto">80sp</dimen>
 </resources>
